# Smart_Energy_Monitoring

./: .env.template  .gitignore  CHANGELOG.md  CHANGELOG_0.1.1.md  COMMIT_MSG_v0.1.1.txt  DATA_README.md  INSTALL_STEPS.md  LEGACY_NOTES.md  README.md  SECURITY.md  docs  energy_monitor.ino  environment.yml  load_profile_analysis_slx  mock_rs485.py  pyproject.toml  rs485_logger.py  test.py
.github/ISSUE_TEMPLATE/: repo_audit.md
.github/workflows/: RS485-Smoke  python-package-conda.yml
data/: bench.csv  sample.csv
demo/: replay_logger.py
docs/: BOM.md  progress-log.md  project-docs
metrics/: metrics.csv  snapshot.csv
plots/: generate_plot.py
src/: replay_logger.py
src/energy/rs485/: __init__.py
src/rs485/: mock_port.py
tests/: test_mock_logger.py  test_rs485_smoke.py
