[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-energy-monitoring"
version = "0.1.0"
description = "IoT-based Smart Energy Monitoring for Indian Hospitals"
authors = [{name="Sammeta Dinesh Kumar", email="sammetadineshkumar@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
numpy = "1.26.4"
pandas = "2.1.1"
matplotlib = "3.8.0"
seaborn = "0.12.3"
scikit-learn = "1.3.2"
pyserial = "3.11.0"
pytest = "7.4.2"
textblob = "0.17.1"

[tool.setuptools.packages.find]
where = ["src"]
